k8s/base/deployment.yml
# k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coconote-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coconote-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: coconote-backend
    spec:
      containers:
        - name: coconote-backend
          image: 730335516193.dkr.ecr.ap-northeast-2.amazonaws.com/coconote/coconote_be:SET_ME_LATER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "750m"
