k8s/base/ingress.yml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coconote-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx  # NGINX Ingress Controller 지정
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Let's Encrypt 인증서 발급을 위한 ClusterIssuer
spec:
  rules:
    - host: server.coconote.site  # 접근할 도메인 이름
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coconote-backend-service  # Service 이름
                port:
                  number: 80
  tls:
    - hosts:
        - server.coconote.site
      secretName: coconote-tls  # TLS 인증서가 저장될 Secret 이름
